corrected scoring and letter frequency according to http://hjalli.com/2007/07/11/lei%C3%B0rett-stig-i-scrabble

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,8 @@
 		<div id="message"></div>
 		<div id="timer"></div>
 		<div id="grid"></div>
+		<div id="infoPlayer1"></div>
+		<div id="infoPlayer2"></div>
 		<table id="scores">
 			<tr>
 				<th id="p1name" class="name"></th>
