adding side display of player scores

--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,13 @@
 	<body>
 		<div id="message"></div>
 		<div id="timer"></div>
-		<div id="grid"></div>
-		<div id="infoPlayer1"></div>
-		<div id="infoPlayer2"></div>
+		<table id="scores">
+		<tr>
+			<td><div id="infoPlayer1">P1</div></td>
+			<td><div id="grid"></div></td>
+			<td><div id="infoPlayer2">P2</div></td>
+		</tr>
+		</table>
 		<table id="scores">
 			<tr>
 				<th id="p1name" class="name"></th>
