moving grid to table setup for sidebar implementation

--- a/client/index.html
+++ b/client/index.html
@@ -10,12 +10,12 @@
 	<body>
 		<div id="message"></div>
 		<div id="timer"></div>
-		<table id="scores">
-		<tr>
-			<td><div id="infoPlayer1">P1</div></td>
-			<td><div id="grid"></div></td>
-			<td><div id="infoPlayer2">P2</div></td>
-		</tr>
+		<table id="gridTable" width="100%">
+			<tr>
+				<td width="50%"><div id="infoPlayer1">P1</div></td>
+				<td><div id="grid"></div></td>
+				<td width="50%"><div id="infoPlayer2">P2</div></td>
+			</tr>
 		</table>
 		<table id="scores">
 			<tr>
