on the way to restructure the layout

--- a/client/index.html
+++ b/client/index.html
@@ -8,13 +8,19 @@
 		<link rel="stylesheet" type="text/css" href="./style.css" /> 
 	</head>
 	<body>
-		<div id="message"></div>
+		
 		<div id="timer"></div>
+		<div id="message"></div>
 		<table id="gridTable" width="100%">
 			<tr>
-				<td width="50%"><div id="infoPlayer1">P1</div></td>
+				<th id="p1Header">Spilari 1</th>
+				<th id="gridHeader"></div></th>
+				<th id="p2Header">Spilari 2</th>
+			</tr>
+			<tr>
+				<td width="50%"><div id="utitle">Notuð orð</div><div id="uwords"></div></td>
 				<td><div id="grid"></div></td>
-				<td width="50%"><div id="infoPlayer2">P2</div></td>
+				<td width="50%"><div id="infoP2"></div></td>
 			</tr>
 		</table>
 		<table id="scores">
@@ -27,13 +33,5 @@
 				<td id="p2score"></td>
 			</tr>
 		</table>
-		<table id="usedwords">
-			<tr>
-				<th id="utitle">Notuð orð</th>
-			</tr>
-			<tr>
-				<td id="uwords"></td>
-			</tr>
-		</table>	
 	</body>
 </html>
