formatted the layout a bit further

--- a/client/index.html
+++ b/client/index.html
@@ -14,23 +14,33 @@
 		<table id="gridTable" width="100%">
 			<tr>
 				<th id="p1Header">Spilari 1</th>
-				<th id="gridHeader"></div></th>
+				<th id="gridHeader">Frábær leikur</th>
 				<th id="p2Header">Spilari 2</th>
 			</tr>
 			<tr>
-				<td width="50%"><div id="utitle">Notuð orð</div><div id="uwords"></div></td>
-				<td><div id="grid"></div></td>
-				<td width="50%"><div id="infoP2"></div></td>
+				<td width="40%" id="p1Info">
+					p1Info kemur hér og fullt fleira
+					<div id="p1name" class="name"></div>
+					<div id="p1score"></div>
+				</td>
+				<td width="20%">
+					<div id="grid"></div>
+				</td>
+				<td width="40%" id="p2Info">
+					p2Info kemur hér og fullt fleira
+					<div id="p2name" class="name"></div>
+					<div id="p2score"></div>
+				</td>
 			</tr>
-		</table>
-		<table id="scores">
 			<tr>
-				<th id="p1name" class="name"></th>
-				<th id="p2name" class="name"></th>
-			</tr>
-			<tr>
-				<td id="p1score"></td>
-				<td id="p2score"></td>
+				<td>
+				</td>
+				<td>
+					<div id="utitle">Öll notuð orð</div>
+					<div id="uwords">
+				</td>
+				<td>
+				</td>
 			</tr>
 		</table>
 	</body>
