--- a/client/index.html
+++ b/client/index.html
@@ -13,22 +13,20 @@
 		<div id="message"></div>
 		<table id="gridTable" width="100%">
 			<tr>
-				<th id="p1Header">Spilari 1</th>
-				<th id="gridHeader">Frábær leikur</th>
-				<th id="p2Header">Spilari 2</th>
+				<th id="p1Header"></th>
+				<th id="gridHeader"></th>
+				<th id="p2Header"></th>
 			</tr>
 			<tr>
-				<td width="40%" id="p1Info">
-					p1Info kemur hér og fullt fleira
-					<div id="p1name" class="name"></div>
+				<td width="40%" id="p1Info" align="center">
+					<div id="p1name"></div>
 					<div id="p1score"></div>
 				</td>
 				<td width="20%">
 					<div id="grid"></div>
 				</td>
-				<td width="40%" id="p2Info">
-					p2Info kemur hér og fullt fleira
-					<div id="p2name" class="name"></div>
+				<td width="40%" id="p2Info" align="center">
+					<div id="p2name"></div>
 					<div id="p2score"></div>
 				</td>
 			</tr>
