made scoring look a bit better and fixed grid-widening-bug

--- a/client/index.html
+++ b/client/index.html
@@ -19,15 +19,15 @@
 			</tr>
 			<tr>
 				<td width="40%" id="p1Info" align="center">
-					<div id="p1name"></div>
-					<div id="p1score"></div>
+					<div id="p1name" class="name"></div>
+					<div id="p1score" class="score"></div>
 				</td>
 				<td width="20%">
 					<div id="grid"></div>
 				</td>
 				<td width="40%" id="p2Info" align="center">
-					<div id="p2name"></div>
-					<div id="p2score"></div>
+					<div id="p2name" class="name"></div>
+					<div id="p2score" class="score"></div>
 				</td>
 			</tr>
 			<tr>
