--- a/client/index.html
+++ b/client/index.html
@@ -11,23 +11,23 @@
 		<div id="message"></div>
 		<table id="gridtable" width="100%">
 			<tr>
-				<th id="p1Header"></th>
+				<th id="meHeader"></th>
 				<th id="gridHeader" align="center">
 					<div id="timer"></div>
 				</th>
-				<th id="p2Header"></th>
+				<th id="opponentHeader"></th>
 			</tr>
 			<tr>
-				<td width="40%" id="p1Info" align="center">
-					<div id="p1Name" class="name"></div>
-					<div id="p1Score" class="score" class="colorGreen"></div>
+				<td width="40%" id="meInfo" align="center">
+					<div id="meName" class="scoreName"></div>
+					<div id="meScore" class="score"></div>
 				</td>
 				<td width="20%">
 					<div id="grid"></div>
 				</td>
-				<td width="40%" id="p2Info" align="center">
-					<div id="p2Name" class="name"></div>
-					<div id="p2Score" class="score" class="colorGreen"></div>
+				<td width="40%" id="opponentInfo" align="center">
+					<div id="opponentName" class="scoreName"></div>
+					<div id="opponentScore" class="score"></div>
 				</td>
 			</tr>
 			<tr>
