bigger grid and min wordlen

--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@
 			<tr>
 				<td></td>
 				<td>
-					<div id="utitle">Öll notuð orð</div>
+					<div id="utitle">Notuð orð</div>
 					<div id="usedwords"></div>
 				</td>
 				<td></td>
