hide timer of non-turn-player

--- a/client/index.html
+++ b/client/index.html
@@ -33,10 +33,10 @@
 			</tr>
 			<tr>
 				<td width="40%" align="center">
-					<div id="meTimer" class="timer">0</div>
+					<div id="meTimer" class="timer colorGreen">0</div>
 				</td>
 				<td width="40%" align="center">
-					<div id="opponentTimer" class="timer">0</div>
+					<div id="opponentTimer" class="timer colorRed">0</div>
 				</td>
 			</tr>
 			<tr>
