--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title>multiplayer 5x5</title>
+		<title>S M Á S K R A F L</title>
 		<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
 		<script type="text/javascript" src="jquery-ui-1.8.14.custom.min.js"></script>
 		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
-		<script type="text/javascript" src="5x5client.js"></script>
+		<script type="text/javascript" src="ssclient.js"></script>
 		<link rel="stylesheet" type="text/css" href="./style.css" /> 
 	</head>
 	<body>
