now move lists are shown for each player - missing number of move though

--- a/client/game.html
+++ b/client/game.html
@@ -24,7 +24,7 @@
 				<td width="40%" id="meInfo" align="center">
 					<div id="meScore" class="score">0</div>
 				</td>
-				<td width="20%" rowspan="2">
+				<td width="20%" rowspan="3">
 					<div id="grid"></div>
 				</td>
 				<td width="40%" id="opponentInfo" align="center">
@@ -40,9 +40,16 @@
 				</td>
 			</tr>
 			<tr>
+				<td width="40%" align="center">
+					<div id="meMoveList" class="moveList"></div>
+				</td>
+				<td width="40%" align="center">
+					<div id="opponentMoveList" class="moveList"></div>
+				</td>
+			</tr>
+			<tr>
 				<td></td>
 				<td>
-					<div id="utitle">Notuð orð</div>
 					<div id="usedwords"></div>
 				</td>
 				<td></td>
