--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,23 @@
 <html>
 <head>
-<title>Skrafl</title>
-</script>	
+	<title>Skrafl</title>
+	<link rel="stylesheet" type="text/css" href="./style.css" /> 
 </head>
 <body>
+<div align="center">
+	<p>&nbsp;</p>
+	<p>&nbsp;</p>
+	<p>&nbsp;</p>
 	<h1>Skrafl</h2>
+	<p>&nbsp;</p>
+	<p>&nbsp;</p>
 	<form action="/send" method="post" id="send">
 		<label for="userName">Hvað heitirðu?&nbsp;</label>
 		<input name="userName" size="30" id="userName" />
+		<p>&nbsp;</p>
 		<input type="submit" />
 	</form>
+</div>
 </body>
 </html>
 
