fixing utf8 and minor things

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<title>Skrafl</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
+	<title>S M Á S K R A F L</title>
 	<link rel="stylesheet" type="text/css" href="./style.css" /> 
 </head>
 <body>
@@ -8,14 +9,14 @@
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
-	<h1>Skrafl</h2>
+	<h1>S M Á S K R A F L</h1>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<form action="/send" method="post" id="send">
-		<label for="userName">Hvað heitirðu?&nbsp;</label>
+		<label for="userName">Nafn: &nbsp;</label>
 		<input name="userName" size="30" id="userName" />
 		<p>&nbsp;</p>
-		<input type="submit" />
+		<input type="submit" value="Spila Smáskrafl" />
 	</form>
 </div>
 </body>
