--- a/client/game.html
+++ b/client/game.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
 		<title>S M Á S K R A F L</title>
 		<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
 		<script type="text/javascript" src="jquery-ui-1.8.14.custom.min.js"></script>
