--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 	<title>S M Á S K R A F L</title>
 	<link rel="stylesheet" type="text/css" href="./style.css" /> 
 </head>
-<body>
+<body background="icesat.jpg" bgcolor="#333333">
 <div align="center">
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
@@ -13,10 +13,11 @@
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<form action="/send" method="post" id="send">
-		<label for="userName">Nafn: &nbsp;</label>
+		<label for="userName">Nafn&nbsp;</label>
+		<p>&nbsp;</p>
 		<input name="userName" size="30" id="userName" />
 		<p>&nbsp;</p>
-		<input type="submit" value="Spila Smáskrafl" />
+		<input type="submit" value="Hefja leik" />
 	</form>
 </div>
 </body>
