--- a/client/game.html
+++ b/client/game.html
@@ -41,19 +41,17 @@
 				</td>
 			</tr>
 			<tr>
-				<td width="40%" align="center">
+				<td width="40%" align="center" rowspan="3">
 					<div id="meMoveList" class="moveList"></div>
 				</td>
-				<td width="40%" align="center">
+				<td width="40%" align="center" rowspan="3">
 					<div id="opponentMoveList" class="moveList"></div>
 				</td>
 			</tr>
 			<tr>
-				<td></td>
 				<td>
 					<div id="usedwords"></div>
 				</td>
-				<td></td>
 			</tr>
 		</table>
 	</body>
