--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,9 @@
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
+	<p>&nbsp;</p>
+	<p>&nbsp;</p>
+	<p>&nbsp;</p>
 	<h1>S M Á S K R A F L</h1>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
