now game ends after five and info shown

--- a/client/game.html
+++ b/client/game.html
@@ -25,7 +25,7 @@
 				<td width="40%" id="meInfo" align="center">
 					<div id="meScore" class="score">0</div>
 				</td>
-				<td width="20%" rowspan="3">
+				<td rowspan="3" id="centerArea">
 					<div id="grid"></div>
 				</td>
 				<td width="40%" id="opponentInfo" align="center">
