--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,21 @@
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
-	<title>S M Á S K R A F L</title>
-	<link rel="stylesheet" type="text/css" href="./style.css" /> 
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
+<title>S M Á S K R A F L</title>
+<link rel="stylesheet" type="text/css" href="./style.css" /> 
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-30644711-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 <body background="icesat.jpg" bgcolor="#333333">
 <div align="center">
