--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,6 @@
 <title>S M Á S K R A F L</title>
 <link rel="stylesheet" type="text/css" href="./style.css" /> 
 <script type="text/javascript">
-
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-30644711-1']);
   _gaq.push(['_trackPageview']);
@@ -14,7 +13,6 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
 </script>
 </head>
 <body background="icesat.jpg" bgcolor="#333333">
@@ -26,6 +24,11 @@
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<h1>S M Á S K R A F L</h1>
+	<p>&nbsp;</p>
+	<p>&nbsp;</p>
+	Orðaleikur þar sem keppt er um að finna sem flest íslensk nafnorð í<br/>
+	nefnifalli, eintölu og án greinis.<br/>
+	<p><b>ATH: Einungis á að finna íslensk NAFNORÐ í NEFNIFALLI í EINTÖLU og ÁN GREINIS.</b><br/></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<form action="/send" method="post" id="send">
