--- a/client/index.html
+++ b/client/index.html
@@ -26,9 +26,15 @@
 	<h1>S M Á S K R A F L</h1>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
-	Orðaleikur þar sem keppt er um að finna sem flest íslensk nafnorð í<br/>
-	nefnifalli, eintölu og án greinis.<br/>
-	<p><b>ATH: Einungis á að finna íslensk NAFNORÐ í NEFNIFALLI í EINTÖLU og ÁN GREINIS.</b><br/></p>
+	Orðaleikur þar sem keppt er um að<br />
+	finna sem flest íslensk nafnorð í<br />
+	nefnifalli, eintölu og án greinis.<br />
+	<p>&nbsp;</p>
+	<p>&nbsp;</p>
+	<p><b>ATH:</b>Einungis á að finna íslensk <b>NAFNORÐ</b><br />
+	í <b>NEFNIFALLI</b> <br />
+	í <b>EINTÖLU</b><br />
+	og <b>ÁN GREINIS.</b></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<form action="/send" method="post" id="send">
