player help info

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,8 @@
 	nefnifalli, eintölu og án greinis.<br />
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
-	<p><b>ATH:</b>Einungis á að finna íslensk <b>NAFNORÐ</b><br />
+	<p><b>ATH:</b>Einungis á að finna<br />
+	íslensk<b>NAFNORÐ</b><br />
 	í <b>NEFNIFALLI</b> <br />
 	í <b>EINTÖLU</b><br />
 	og <b>ÁN GREINIS.</b></p>
