code cleanup and class diagram

--- a/client/index.html
+++ b/client/index.html
@@ -26,16 +26,14 @@
 	<h1>S M Á S K R A F L</h1>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
-	Orðaleikur þar sem keppt er um að<br />
-	finna sem flest íslensk nafnorð í<br />
+	Orðaleikur þar sem keppt er um að finna sem<br />
+	flest a.m.k. fjögurra stafa íslensk nafnorð í<br />
 	nefnifalli, eintölu og án greinis.<br />
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<p><b>ATH:</b>Einungis á að finna<br />
-	íslensk <b>NAFNORÐ</b><br />
-	í <b>NEFNIFALLI</b> <br />
-	í <b>EINTÖLU</b><br />
-	og <b>ÁN GREINIS.</b></p>
+	a.m.k. fjögurra stafa íslensk<br />
+	<b>NAFNORÐ</b> í <b>NEFNIFALLI</b> í <b>EINTÖLU</b> og <b>ÁN GREINIS.</b></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<form action="/send" method="post" id="send">
