--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
 <title>S M Á S K R A F L</title>
+<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="jquery-ui-1.8.14.custom.min.js"></script>
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="sslobby.js"></script>
 <link rel="stylesheet" type="text/css" href="./style.css" /> 
+<link rel="stylesheet" type="text/css" href="./lobbyStyle.css" /> 
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-30644711-1']);
@@ -16,16 +21,14 @@
 </script>
 </head>
 <body background="icesat.jpg" bgcolor="#333333">
-<div align="center">
-	<p>&nbsp;</p>
-	<p>&nbsp;</p>
-	<p>&nbsp;</p>
-	<p>&nbsp;</p>
+<div id="ssHeader">
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
 	<h1>S M Á S K R A F L</h1>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
+</div>
+<div id="ssInstructions">
 	Orðaleikur þar sem keppt er um að finna sem<br />
 	flest a.m.k. fjögurra stafa íslensk nafnorð í<br />
 	nefnifalli, eintölu og án greinis.<br />
@@ -36,13 +39,13 @@
 	<b>NAFNORÐ</b> í <b>NEFNIFALLI</b> í <b>EINTÖLU</b> og <b>ÁN GREINIS.</b></p>
 	<p>&nbsp;</p>
 	<p>&nbsp;</p>
-	<form action="/send" method="post" id="send">
-		<label for="userName">Nafn&nbsp;</label>
-		<p>&nbsp;</p>
-		<input name="userName" size="30" id="userName" />
-		<p>&nbsp;</p>
-		<input type="submit" value="Hefja leik" />
-	</form>
+</div>
+<div id="ssLoginAndLobby">
+	<label for="userName">Nafn&nbsp;</label>
+	<p>&nbsp;</p>
+	<input name="userName" size="30" id="userName" />
+	<p>&nbsp;</p>
+	<a href="javascript: login(this.userName)"><img name="innskraning" src="innskraning.png" /></a>
 </div>
 </body>
 </html>
