fixed look of player list

--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,9 @@
 	</form>
 </div>
 <div id="ssLobby">
+	<b>Smelltu á þann sem þú vilt keppa við:</b>
+	<div id="playerList">
+	</div>
 </div>
 </body>
 </html>
