--- a/client/index.html
+++ b/client/index.html
@@ -49,8 +49,6 @@
 </div>
 <div id="ssLobby">
 	<b>Smelltu á þann sem þú vilt keppa við:</b>
-	<div id="playerList">
-	</div>
-</div>
+	<div id="playerList"> </div> </div>
 </body>
 </html>
