don't check-in js files

--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,7 @@
 </div>
 <div id="ssLobby">
 	<b>Smelltu á þann sem þú vilt keppa við:</b>
-	<div id="playerList"> </div> </div>
+	<div id="playerList"> </div>
+</div>
 </body>
 </html>
